--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment</title>
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles/navbar.css">
 </head>
-<body>
-    <h1>hello</h1>
-    tasnim
+<body class="font-inter">
+    <header>
+        <nav>
+    <div> 
+        <img src="B13-A01-Knowledge-Vault/assets/logo-navbar.png" alt="Logo" width="139px" height="60px">
+    </div>
+    
+    <ul class="nav-links">
+        <li><a href="#features">Features</a></li>
+        <li><a href="#how-it-works">How it works</a></li>
+        <li><a href="#why-different">Why its different</a></li>
+    </ul>
+    
+    <button>Get Early Access</button>
+</nav>
+    </header>
 </body>
 </html>
