--- a/index.html
+++ b/index.html
@@ -158,5 +158,29 @@
         </p>
     </div>
 </section>
+<footer>
+    <div class="container footer-content">
+        <div class="footer-top-row">
+            <div class="footer-logo-container">
+                <img src="B13-A01-Knowledge-Vault\assets\logo-footer.png" alt="Knowledge Vault Logo" class="footer-logo" width="359px" height="20px">
+            </div>
+
+            <div class="social-links">
+                <p class="social-header">Social Links</p>
+                <div class="social-icons-wrapper">
+                    <a href="#" class="social-icon twitter"></a>
+                    <a href="#" class="social-icon linkedin"></a>
+                    <a href="#" class="social-icon dribbble"></a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="footer-bottom-row">
+            <p class="copyright-bottom">
+                © 2026 Personal Knowledge Vault. All rights reserved.
+            </p>
+        </div>
+    </div>
+</footer>
     </body>
 </html>
