--- a/index.html
+++ b/index.html
@@ -168,10 +168,20 @@
             <div class="social-links">
                 <p class="social-header">Social Links</p>
                 <div class="social-icons-wrapper">
-                    <a href="#" class="social-icon twitter"></a>
-                    <a href="#" class="social-icon linkedin"></a>
-                    <a href="#" class="social-icon dribbble"></a>
-                </div>
+    
+    <a href="#" class="social-icon twitter">
+        <img src="B13-A01-Knowledge-Vault\assets\twitter.svg" alt="Twitter Logo">
+    </a>
+
+    <a href="#" class="social-icon linkedin">
+        <img src="B13-A01-Knowledge-Vault\assets\inlogo.svg" alt="LinkedIn Logo">
+    </a>
+
+    <a href="#" class="social-icon dribbble">
+        <img src="B13-A01-Knowledge-Vault\assets\facebooklogo.svg" alt="Dribbble Logo">
+    </a>
+
+</div>
             </div>
         </div>
         
